starting Parser tests

--- a/Timezone/Timezone.Core.Tests/Timezone.Core.Tests.csproj
+++ b/Timezone/Timezone.Core.Tests/Timezone.Core.Tests.csproj
@@ -48,11 +48,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Timezone.Core\Timezone.Core.csproj">
+      <Project>{10e0f336-507e-4207-8e2c-78e60a08eebd}</Project>
+      <Name>Timezone.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
