--- a/Timezone/Timezone.Core.Tests/Timezone.Core.Tests.csproj
+++ b/Timezone/Timezone.Core.Tests/Timezone.Core.Tests.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReaderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
