--- a/Timezone/Timezone.Main/App.config
+++ b/Timezone/Timezone.Main/App.config
@@ -25,7 +25,7 @@
       </filter>
     </appender>
     <root>
-      <level value="DEBUG" />
+      <level value="INFO" />
       <appender-ref ref="FileAppender" />
     </root>
   </log4net>
